--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -1,17 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello MainController!{% endblock %}
+{% block title %}Hello MainController!
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+	<div>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+		<a href="./sorties" class="text-white bg-blue-700 rounded-lg text-sm px-5 py-2.5 m-5
+         ">page sorties</a>
 
-    This friendly message is coming from:
-   
-</div>
+	</div>
+
+
 {% endblock %}
