--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,22 +14,27 @@
     {% block javascripts %}
     {% endblock %}
 </head>
+<body>
 <header>
-    <h1>Sortir !</h1>
-    <ul>
-        <li><a href="{{ path("app_main") }}">Accueil</a></li>
-        {% if app.user %}
-            {% if is_granted("ROLE_ADMIN") %}
-                <li><a href="" title="Gestion des Participants">Gestion des Participants</a></li>
-                <li><a>Villes</a></li>
-                <li><a>Campus</a></li>
-            {% endif %}
-            <li><a href="{{ path("security_editLoggedUser") }}" title="Modifier mon profil">Mon Profil</a></li>
-            <li><a href="{{ path("app_logout") }}" title="Déconnectez-vous">Se déconnecter</a></li>
-        {% else %}
-            <li><a href="{{ path("app_login") }}" title="Connectez-vous">Se connecter</a></li>
-        {% endif %}
-    </ul>
+    <div class="header my-8 flex justify-between items-center">
+        <h1 class="">Sortir !</h1>
+        <nav>
+            <ul class="flex space-x-5 list-none">
+                <li><a href="{{ path("app_main") }}">Accueil</a></li>
+                {% if app.user %}
+                    {% if is_granted("ROLE_ADMIN") %}
+                        <li><a href="" title="Gestion des Participants">Gestion des Participants</a></li>
+                        <li><a>Villes</a></li>
+                        <li><a>Campus</a></li>
+                    {% endif %}
+                    <li><a href="{{ path("security_editLoggedUser") }}" title="Modifier mon profil">Mon Profil</a></li>
+                    <li><a href="{{ path("app_logout") }}" title="Déconnectez-vous">Se déconnecter</a></li>
+                {% else %}
+                    <li><a href="{{ path("app_login") }}" title="Connectez-vous">Se connecter</a></li>
+                {% endif %}
+            </ul>
+        </nav>
+    </div>
 </header>
 {% for label, messages in app.flashes %}
     {% for message in messages %}
@@ -38,7 +43,7 @@
         </div>
     {% endfor %}
 {% endfor %}
-<body>
+
 {% block body %}{% endblock %}
 </body>
 </html>
