--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,12 +20,14 @@
         <h1 class="">Sortir !</h1>
         <nav>
             <ul class="flex space-x-5 list-none">
-                <li><a href="{{ path("app_main") }}">Accueil</a></li>
                 {% if app.user %}
+                    <li><a href="{{ path("app_main") }}">Accueil</a></li>
+                    <li><a href="{{ path("nouvelle_sortie") }}">Créer une sortie</a></li>
                     {% if is_granted("ROLE_ADMIN") %}
-                        <li><a href="" title="Gestion des Participants">Gestion des Participants</a></li>
-                        <li><a>Villes</a></li>
-                        <li><a>Campus</a></li>
+                        <li><a href="{{ path('admin_gestionParticipants') }}" title="Gestion des Participants">Gestion
+                                des Participants</a></li>
+                        <li><a href="{{ path('admin_gestionVilles') }}" title="Gestion des Villes">Villes</a></li>
+                        <li><a href="{{ path('admin_gestionCampus') }}" title="Gestion des Campus">Campus</a></li>
                     {% endif %}
                     <li><a href="{{ path("security_editLoggedUser") }}" title="Modifier mon profil">Mon Profil</a></li>
                     <li><a href="{{ path("app_logout") }}" title="Déconnectez-vous">Se déconnecter</a></li>
