--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,14 +3,14 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
+    <h1>Créer un participant</h1>
 
     {{ form_errors(registrationForm) }}
 
     {{ form_start(registrationForm) }}
     
     {{ form_widget(registrationForm) }}
-        <button type="submit" class="btn">Register</button>
+        <button type="submit" class="btn">Créer un participant</button>
     
     {{ form_end(registrationForm) }}
 {% endblock %}
