--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -6,8 +6,8 @@
 {% block body %}
 	<div>
 
-		<a href="./sorties" class="text-white bg-blue-700 rounded-lg text-sm px-5 py-2.5 m-5
-         ">page sorties</a>
+		<a href="./nouvelle-sortie" class="text-white bg-blue-700 rounded-lg text-sm px-5 py-2.5 m-5
+         ">Créer une sortie</a>
 
 	</div>
 
