--- a/templates/sortie/nouvelle-sortie.html.twig
+++ b/templates/sortie/nouvelle-sortie.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello SortieController!
+{% block title %}Créer une sortie.
 {% endblock %}
 
 {% block body %}
