--- a/templates/sortie/modif-sortie.html.twig
+++ b/templates/sortie/modif-sortie.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} - Modifier une sortie.
+{% block title %}
+	- Modifier une sortie.
 {% endblock %}
 
 {% block body %}
@@ -21,6 +22,7 @@
 			</div>
 			<div class="space-y-3">
 				{{ form_row(modifSortieForm.ville) }}
+
 				{{ form_row(modifSortieForm.lieu) }}
 				<p>Rue :
 					{{ sortie.lieu.rue }}</p>
@@ -36,7 +38,7 @@
 		<div class="flex mt-12 space-x-6 justify-center">
 			{{ form_row(modifSortieForm.enregistrer, { 'attr': {'class': 'border-2 border-black px-3 py-1 shadow-md shadow-slate-950'}}) }}
 			{{ form_row(modifSortieForm.publier, { 'attr': {'class': 'border-2 border-black px-3 py-1 shadow-md shadow-slate-950'}}) }}
-          {{ form_row(modifSortieForm.supprimer, { 'attr': {'class': 'border-2 border-black px-3 py-1 shadow-md shadow-slate-950'}}) }}
+			{{ form_row(modifSortieForm.supprimer, { 'attr': {'class': 'border-2 border-black px-3 py-1 shadow-md shadow-slate-950'}}) }}
 			<a href="./" class="border-2 border-black px-3 py-1 shadow-md shadow-slate-950">Annuler</a>
 		</div>
 
