en cours : select lieux selon ville

--- a/templates/sortie/nouvelle-sortie.html.twig
+++ b/templates/sortie/nouvelle-sortie.html.twig
@@ -21,7 +21,8 @@
 			</div>
 			<div class="space-y-3">
 				{{ form_row(nouvelleSortieForm.ville) }}
-				{{ form_row(nouvelleSortieForm.lieu) }}
+
+				 {{ form_row(nouvelleSortieForm.lieu) }} 
 				<div>
 					Rue :
 				</div>
@@ -45,4 +46,33 @@
 
 		{{ form_end(nouvelleSortieForm) }}
 	</main>
+{% endblock %}
+
+{% block javascripts %}
+	<script>
+		window.onload = () => {
+			let ville = document.getElementById('nouvelle_sortie_ville');
+			ville.addEventListener("change", function() {
+				let form = this.closest("form");
+				let data = this.name + "=" + this.value;
+				
+				fetch(form.action, {
+					method: form.getAttribute('method'),
+					body: data,
+					headers: {
+						"Content-Type": "application/x-www-form-urlencoded; charset:utf-8"
+					}
+				})
+				.then(response => response.text())
+				.then(html => {
+					let content = document.createElement("html");
+					content.innerHTML = html;
+					let nouveauSelect = content.querySelector('#nouvelle_sortie_lieu');
+					document.querySelector("#nouvelle_sortie_lieu").replaceWith(nouveauSelect);
+					console.log(nouveauSelect);
+				})
+				
+			})
+		}
+	</script>
 {% endblock %}
