suite commit annulation

--- a/templates/sortie/nouvelle-sortie.html.twig
+++ b/templates/sortie/nouvelle-sortie.html.twig
@@ -48,7 +48,7 @@
 	</main>
 {% endblock %}
 
-{% block javascripts %}
+{# {% block javascripts %}
 	<script>
 		window.onload = () => {
 			let ville = document.getElementById('nouvelle_sortie_ville');
@@ -75,4 +75,4 @@
 			})
 		}
 	</script>
-{% endblock %}
+{% endblock %} #}
