mise en place assert+contraintes de formulaires

--- a/templates/admin/gestionParticipants.html.twig
+++ b/templates/admin/gestionParticipants.html.twig
@@ -6,7 +6,7 @@
     <div class="container mx-auto px-4">
         <h1>Gestion des Participants</h1>
 
-        <a href="{{ path('app_register') }}">Créer un participant</a>
+        <a href="{{ path('admin_register') }}">Créer un participant</a>
         <p>TODO</p>
 
     </div>
