--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,10 +16,10 @@
 </head>
 <body>
 <header>
-    <div class="header my-8 flex justify-between items-center">
+    <div class="header m-8 flex justify-between items-center">
         <h1 class="">Sortir !</h1>
         <nav>
-            <ul class="flex space-x-5 list-none">
+            <ul class="flex space-x-8 list-none">
                 {% if app.user %}
                     <li><a href="{{ path("app_affichage_sorties") }}">Accueil</a></li>
                     <li><a href="{{ path("nouvelle_sortie") }}">Créer une sortie</a></li>
