gestion des participant par l'admin

--- a/templates/admin/gestionParticipants.html.twig
+++ b/templates/admin/gestionParticipants.html.twig
@@ -6,8 +6,74 @@
     <div class="container mx-auto px-4">
         <h1>Gestion des Participants</h1>
 
-        <a href="{{ path('admin_register') }}">Créer un participant</a>
-        <p>TODO</p>
+        <a href="{{ path('admin_register') }}" class="bg-slate-600 hover:bg-slate-900 text-white font-bold py-2 px-4 rounded">Créer un participant</a>
+
+        <table class="my-3 border-collapse border-2 border-slate-700">
+            <thead class="bg-slate-600 text-white">
+            <tr>
+                <th class="p-2 border-2 border-slate-700">Pseudo</th>
+                <th class="p-2 border-2 border-slate-700">Nom</th>
+                <th class="p-2 border-2 border-slate-700">Prénom</th>
+                <th class="p-2 border-2 border-slate-700">Campus</th>
+                <th class="p-2 border-2 border-slate-700">Email</th>
+                <th class="p-2 border-2 border-slate-700">Téléphone</th>
+                <th class="p-2 border-2 border-slate-700">Rôles</th>
+                <th class="p-2 border-2 border-slate-700">Inactif</th>
+                <th class="p-2 border-2 border-slate-700">Action</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for p in participants %}
+
+                <tr>
+                    <td class="p-2 border border-slate-400">{{ p.pseudo }}</td>
+                    <td class="p-2 border border-slate-400">{{ p.nom }}</td>
+                    <td class="p-2 border border-slate-400">{{ p.prenom }}</td>
+                    <td class="p-2 border border-slate-400">{{ p.campus.nom }}</td>
+                    <td class="p-2 border border-slate-400">{{ p.email }}</td>
+                    <td class="p-2 border border-slate-400">{{ p.telephone }}</td>
+                    <td class="p-2 border border-slate-400">
+                        {% if p.isAdmin %}
+                            Admin
+                        {% endif %}
+
+                    </td>
+                    <td class="p-2 border border-slate-400">
+                        {% if not p.isActif %}
+                            Compte désactivé
+                        {% endif %}
+
+                    </td>
+
+                    <td class="p-2 border border-slate-400">
+                        <a href="{{ path('admin_gestionParticipants_isActif', {'id' : p.id}) }}">
+                            {% if p.isActif %}
+                            Désactiver le compte
+                            {% else %}
+                                Réactiver le compte
+                                {% endif %}
+                        </a>
+<br>
+                        <a href="{{ path('admin_gestionParticipants_isAdmin', {'id' : p.id}) }}">
+                            {% if p.isAdmin %}
+                                Retirer les droits d'administration
+                            {% else %}
+                                Rendre Administrateur
+                            {% endif %}
+                        </a>
+                        <br>
+                        <a href="{{ path('admin_gestionParticipants_supp', {'id' : p.id}) }}">
+                            Supprimer
+                        </a>
+                        {#                            <a href="{{ path('admin_gestionParticipants_isActif', {'id' : p.id}) }}">Désactiver</a> #}
+                        {#                            <a href="{{ path('admin_gestionParticipants_admin', {'id' : p.id}) }}">Désactiver</a> #}
+                        {#                            <a href="{{ path('admin_gestionParticipants_Supp', {'id' : p.id}) }}">Supprimer</a> #}
+                    </td>
+                </tr>
+            {% endfor %}
+
+            </tbody>
+        </table>
 
     </div>
 {% endblock %}
