--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -41,7 +41,7 @@
 {% for label, messages in app.flashes %}
     {% for message in messages %}
         <div class="alert-{{ label }}">
-            {{ message }}
+            {{ message | raw }}
         </div>
     {% endfor %}
 {% endfor %}
