--- a/templates/sortie/details-sortie.html.twig
+++ b/templates/sortie/details-sortie.html.twig
@@ -61,7 +61,7 @@
 			<thead class=" bg-slate-600 text-white">
 				<tr>
 					<th class="w-1/3 p-2 border-2 border-slate-700">Pseudo</th>
-					<th class="w-2/3 p-2 p-2 border-2 border-slate-700">Nom</th>
+					<th class="w-2/3 p-2 border-2 border-slate-700">Nom</th>
 				</tr>
 			</thead>
 			<tbody>
