--- a/templates/sortie/modif-sortie.html.twig
+++ b/templates/sortie/modif-sortie.html.twig
@@ -5,13 +5,13 @@
 {% endblock %}
 
 {% block body %}
-	<main class="flex flex-col">
-		<h1 class=" text-center my-5">
+	<main class="container flex flex-col mx-auto">
+		<h1 class=" text-center mt-12">
 			Modifier une sortie
 		</h1>
 
 		{{ form_start(modifSortieForm) }}
-		<div class="grid grid-cols-2 w-3/4 mx-auto text-xs">
+		<div class="grid grid-cols-2 w-1/2 mx-auto mt-12  text-sm">
 			<div class="space-y-3">
 				{{ form_row(modifSortieForm.nom) }}
 				{{ form_row(modifSortieForm.dateHeureDebut) }}
@@ -22,7 +22,7 @@
 			</div>
 			<div class="space-y-3">
 				{{ form_row(modifSortieForm.ville) }}
-
+				
 				{{ form_row(modifSortieForm.lieu) }}
 				<p>Rue :
 					{{ sortie.lieu.rue }}</p>
@@ -38,10 +38,36 @@
 		<div class="flex mt-12 space-x-6 justify-center">
 			{{ form_row(modifSortieForm.enregistrer, { 'attr': {'class': 'border-2 border-black px-3 py-1 shadow-md shadow-slate-950'}}) }}
 			{{ form_row(modifSortieForm.publier, { 'attr': {'class': 'border-2 border-black px-3 py-1 shadow-md shadow-slate-950'}}) }}
-			{{ form_row(modifSortieForm.supprimer, { 'attr': {'class': 'border-2 border-black px-3 py-1 shadow-md shadow-slate-950'}}) }}
-			<a href="{{path('app_affichage_sorties') }}" class="border-2 border-black px-3 py-1 shadow-md shadow-slate-950">Annuler</a>
+			{{ form_row(modifSortieForm.supprimer, { 'attr': {'class': 'border-2 border-black px-3 py-1 shadow-md shadow-slate-950 bg-red-600 text-white'}}) }}
+			<a href="{{path('app_affichage_sorties') }}" class="border-2 border-black px-3 py-1 shadow-md shadow-slate-950 bg-red-200">Annuler</a>
 		</div>
 
 		{{ form_end(modifSortieForm) }}
 	</main>
+{% endblock %}
+
+{% block javascripts %}
+	<script>
+	
+		// window.onload = () => {
+		// 	let ville = document.querySelector('#modif_sortie_ville');
+		// 	ville.addEventListener("change", function() {
+		// 		let form = this.closest("form");
+		// 		let formData = new FormData(form);
+		// 		console.log(formData)
+	
+		// 		fetch(form.action, {
+		// 			method: form.getAttribute('method'),
+		// 			body: formData,
+		// 		})
+		// 		.then(response => response.text())
+		// 		.then(html => {
+		// 			let content = document.createElement("html");
+		// 			content.innerHTML = html;
+		// 			let nouveauSelect = content.querySelector('#modif_sortie_lieu');
+		// 			document.querySelector("#modif_sortie_lieu").replaceWith(nouveauSelect);
+		// 		})				
+		// 	})
+		// }
+	</script>
 {% endblock %}
