--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,7 +18,7 @@
 <header>
     <div class="header m-8 flex justify-between items-center">
         <h1 class="">Sortir !</h1>
-        <nav>
+        <nav class="navbar">
             <ul class="flex space-x-8 list-none">
                 {% if app.user %}
                     <li><a href="{{ path("app_affichage_sorties") }}">Accueil</a></li>
