--- a/templates/admin/gestionParticipants.html.twig
+++ b/templates/admin/gestionParticipants.html.twig
@@ -6,7 +6,19 @@
     <div class="container mx-auto px-4">
         <h1>Gestion des Participants</h1>
 
-        <a href="{{ path('admin_register') }}" class="bg-slate-600 hover:bg-slate-900 text-white font-bold py-2 px-4 rounded">Créer un participant</a>
+        <a href="{{ path('admin_register') }}" class="bg-slate-600 hover:bg-slate-900 text-white font-bold py-2 px-4 rounded ">Créer un participant</a>
+
+        <h3>Charger un fichier de participants</h3>
+
+        {{ form_errors(uploadParticipantViaCsvForm) }}
+
+        {{ form_start(uploadParticipantViaCsvForm) }}
+
+        {{ form_widget(uploadParticipantViaCsvForm) }}
+        <button type="submit" class="btn">Charger le fichier</button>
+
+        {{ form_end(uploadParticipantViaCsvForm) }}
+
 
         <table class="my-3 border-collapse border-2 border-slate-700">
             <thead class="bg-slate-600 text-white">
