--- a/templates/sortie/nouvelle-sortie.html.twig
+++ b/templates/sortie/nouvelle-sortie.html.twig
@@ -9,6 +9,7 @@
 			Créer une sortie
 		</h1>
 
+
 		{{ form_start(nouvelleSortieForm) }}
 		<div class="grid grid-cols-2 mt-12 w-1/2 mx-auto text-sm">
 			<div class="space-y-3">
@@ -22,17 +23,20 @@
 			<div class="space-y-3">
 				{{ form_row(nouvelleSortieForm.ville) }}
 
-				{{ form_row(nouvelleSortieForm.lieu) }}
-				<div id='code_postal'>
-					Code postal : 
+				<div class="flex">
+					{{ form_row(nouvelleSortieForm.lieu) }}
+					<div class="group relative" id="modal_button">
+						<button type="button" class="mx-auto transition duration-150 ease-in-out hover:bg-indigo-600 bg-black rounded-full text-white px-2 text-xl" onclick="modalHandler(true)">+</button>
+
+						<span class="border border-slate-600 p-2 pointer-events-none absolute -top-1 left-9 w-max opacity-0 transition-opacity group-hover:opacity-100">
+							Ajouter un lieu
+						</span>
+					</div>
 				</div>
-				{#
-				<div id='latitude'>
-					Latitude :
+
+				<div id='code_postal' class=" font-semibold">
+					Code postal :
 				</div>
-				<div id='longitude'>
-					Longitude :
-				</div> #}
 			</div>
 		</div>
 
@@ -43,47 +47,97 @@
 		</div>
 
 		{{ form_end(nouvelleSortieForm) }}
-	</main>
-{% endblock %}
 
-{% block javascripts %}
-	<script>
-		window.onload = () => {
-			let ville = document.querySelector('#nouvelle_sortie_ville');
+		<modal>
 
-			let codePostal = document.querySelector('#code_postal');
+			<div class="py-12 bg-gray-700 transition duration-150 ease-in-out z-10 absolute top-0 right-0 bottom-0 left-0" id="modal">
+				<div role="alert" class="container mx-auto w-11/12 md:w-2/3 max-w-lg">
+					<div class="relative py-8 px-5 md:px-10 bg-white shadow-md rounded border border-gray-400">
 
-			ville.addEventListener("change", function() {
-				let form = this.closest("form");
-				let formData = new FormData(form);
-				fetch(form.action, {
-					method: form.getAttribute('method'),
-					body: formData,
-				})
-				.then(response => response.text())
-				.then(html => {
-					let content = document.createElement("html");
-					content.innerHTML = html;
-					let nouveauSelect = content.querySelector('#nouvelle_sortie_lieu');
-					document.querySelector("#nouvelle_sortie_lieu").replaceWith(nouveauSelect);
-				})
+						<div>
+							{% include "lieu/nouveauLieu.html.twig" %}
+						</div>
 
-				let selectedVilleId = this.value;
+						<button class="cursor-pointer absolute top-0 right-0 mt-4 mr-5 text-gray-400 hover:text-gray-600 transition duration-150 ease-in-out rounded focus:ring-2 focus:outline-none focus:ring-gray-600" onclick="modalHandler()" aria-label="close modal" role="button">
+							<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-x" width="20" height="20" viewbox="0 0 24 24" stroke-width="2.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+								<path stroke="none" d="M0 0h24v24H0z"/>
+								<line x1="18" y1="6" x2="6" y2="18"/>
+								<line x1="6" y1="6" x2="18" y2="18"/>
+							</svg>
+						</button>
+					</div>
+				</div>
+			</div>
 
-				fetch(`/get-cp-by-ville/${selectedVilleId}`, {
-				method: 'GET'
-				})
-				.then(response => response.json())
-				.then(data => {
-					if (data.code_postal) {
-						codePostal.textContent = `Code postal : ${data.code_postal}`;
-					} else {
-						codePostal.textContent = '';
-					}
-				})	
-        	});
-		}
-	</script>
-{% endblock %}
+			<script>
+				let modal = document.getElementById("modal");
+modal.style.display = "none";
+function modalHandler(val) {
+if (val) {
+fadeIn(modal);
+} else {
+fadeOut(modal);
+}
+}
+function fadeOut(el) {
+el.style.opacity = 1;
+(function fade() {
+if ((el.style.opacity -= 0.1) < 0) {
+el.style.display = "none";
+} else {
+requestAnimationFrame(fade);
+}
+})();
+}
+function fadeIn(el, display) {
+el.style.opacity = 0;
+el.style.display = display || "flex";
+(function fade() {
+let val = parseFloat(el.style.opacity);
+if (!((val += 0.2) > 1)) {
+el.style.opacity = val;
+requestAnimationFrame(fade);
+}
+})();
+}
+			</script>
 
+		</modal>
 
+	{% endblock %}
+
+	{% block javascripts %}
+		<script>
+			window.onload = () => {
+let ville = document.querySelector('#nouvelle_sortie_ville');
+
+let codePostal = document.querySelector('#code_postal');
+
+ville.addEventListener("change", function () {
+let form = this.closest("form");
+let formData = new FormData(form);
+fetch(form.action, {
+method: form.getAttribute('method'),
+body: formData
+}).then(response => response.text()).then(html => {
+let content = document.createElement("html");
+content.innerHTML = html;
+let nouveauSelect = content.querySelector('#nouvelle_sortie_lieu');
+document.querySelector("#nouvelle_sortie_lieu").replaceWith(nouveauSelect);
+})
+
+let selectedVilleId = this.value;
+
+fetch (`/get-cp-by-ville/${selectedVilleId}`, {method: 'GET'}).then(response => response.json()).then(data => {
+if (data.code_postal) {
+codePostal.textContent = `Code postal : ${
+data.code_postal
+}`;
+} else {
+codePostal.textContent = '';
+}
+})
+});
+}
+		</script>
+	{% endblock %}
