--- a/templates/affichage_sorties/index.html.twig
+++ b/templates/affichage_sorties/index.html.twig
@@ -13,7 +13,7 @@
 				{{ "now"|date("m/d/Y") }}</p>
 			<p>Participant:
 				{{ app.user.prenom }}
-				{{ app.user.prenom|first|upper }}.</p>
+				{{ app.user.nom|first|upper }}.</p>
 		</div>
 		<div class="space-y-2">
 			{{ form_errors(rechercheForm) }}
