--- a/templates/sortie/nouvelle-sortie.html.twig
+++ b/templates/sortie/nouvelle-sortie.html.twig
@@ -163,7 +163,7 @@
                                 } else {
                                     document.querySelector("#longitude").textContent = `longitude : `;
                                 }
-                                
+
                                 if (data.latitude) {
                                     document.querySelector("#latitude").textContent = `latitude : ${data.latitude}`;
                                 } else {
@@ -185,6 +185,9 @@
                         } else {
                             codePostal.textContent = '';
                         }
+                        document.querySelector("#rue").textContent = `Adresse :`;
+                        document.querySelector("#longitude").textContent = `longitude : `;
+                        document.querySelector("#latitude").textContent = `latitude :`;
                     })
                     console.log("lieu", lieu);
 
